[package]
name = "aparsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
indoc = "2.0.3"
minijinja = "1.0.5"
serde = {version = "1.0.182", features = ["derive"] }
toml = "0.7.6"
